--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tree-sitter-meson",
   "version": "1.0.0",
-  "description": "",
+  "description": "A tree-sitter for meson",
   "main": "bindings/node",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tree-sitter generate",
+    "test": "tree-sitter test"
   },
   "keywords": [],
   "author": "",
