--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
       - name: Run lint
         run: |
-          echo yes
+          npm run lint
   test:
     name: Tree-sitter tests
     runs-on: ubuntu-latest
