fix(foldname): from grammer to grammar
add(package.json): add format and lint

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bindings/node",
   "scripts": {
     "lint": "prettier --check grammar.js grammar/*.js",
+    "format": "prettier --write grammar.js grammar/*.js",
     "build": "tree-sitter generate",
     "test": "tree-sitter test"
   },
