chore!: update tree_sitter version

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 /src/** linguist-vendored
 /examples/* linguist-vendored
+
+# Zig bindings
+build.zig linguist-generated
+build.zig.zon linguist-generated
